<resources>
    <string name="app_name">Client App</string>
    <string name="Access_Name">Email Address</string>
    <string name="AccessName">textAccessName</string>
    <string name="Access_Code">Password </string>
    <string name="close">Close</string>
    <string name="view_logs">View Logs</string>
    <string name="col1">LogID</string>
    <string name="col2">Log Stat</string>
    <string name="col3">Date</string>
    <string name="col4">Time</string>
    <string name="col5">Gate</string>
    <string name="col6">SGID</string>
    <string name="row1LogID">12312</string>
    <string name="row1Log_Stat">Entry</string>
    <string name="row1Date">5/9/021</string>
    <string name="row1Time">5:00am</string>
    <string name="row1Gate">3</string>
    <string name="row1SG_ID">SG12312</string>
    <string name="help">HELP</string>
    <string name="access_name">Access Name</string>
    <string name="show_qr_pass">show qr pass</string>
    <string name="faq">FAQ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>