<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/login4"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/help"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="72dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/faq"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:passwordToggleEnabled="true"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:text="Client Pass"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.329"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.109"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Access Name"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35"
        tools:ignore="HardcodedText,MissingConstraints" />

    <EditText
        android:id="@+id/AccessName"
        android:textColor="@color/black"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="332dp"
        android:autofillHints="@string/Access_Name"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/Access_Name"
        android:padding="10dp"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEGHIJKLMNOPQRSTUVWXYZ"
        android:maxLines="1"
        android:maxLength="8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/enter_name"
        app:layout_constraintTop_toBottomOf="@+id/enter_name"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints,TextFields,UnknownId" />

    <TextView
        android:id="@+id/accesscode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Access code"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.571"
        tools:ignore="HardcodedText,MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="208dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="@+id/enter_details"
        app:layout_constraintTop_toBottomOf="@+id/enter_details"
        app:layout_constraintVertical_bias="0.148"
        app:passwordToggleEnabled="true"
        tools:ignore="UnknownId">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/code"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:background="@drawable/border"
            android:digits="abcdefghijklmnopqwrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
            android:hint="@string/Access_Code"
            android:inputType="textPassword"
            android:maxLength="8"
            android:maxLines="1"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="204dp"
        android:layout_marginBottom="128dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/show_qr_pass"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:passwordToggleEnabled="true"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="128dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/close"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>